--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Custom styles for this template -->
     <link href="css/new-age.css" rel="stylesheet">
 
-     <!-- favicon -->
+    <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -55,6 +55,22 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- og:tags -->
+    <meta property="og:image" content="https://bluewallet.io/img/bluewallet-big.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/bluewallet-big.png" />
+
+    <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
+    <meta property="og:url" content="https://bluewallet.io/" />
+    <meta property="og:title" content="BlueWallet - Bitcoin wallet" />
+    <meta property="fb:app_id" content="254973701957449" />
+    <meta property="fb:pages" content="499685187154976" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BlueWallet - Bitcoin wallet" />
+    <meta name="twitter:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
+    <meta name="twitter:url" content="https://bluewallet.io/" />
 
   </head>
 
