--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <p>Product & UX</p>
           </div>
           <div class="col-lg-4 people">
-            <img src="img/volodymyr.png">
+            <img src="img/vlad.png">
             <h3>Vladimir Mishin</h3>
             <p>Puerto Plata</p>
             <p>Strategy</p>
