--- a/index.html
+++ b/index.html
@@ -174,32 +174,42 @@
                 </div>
                   <div class="col-lg-12 my-auto">
                     <div class="row">
-                      <div class="col-lg-3">
-                        <div class="feature-item">
+                      <div class="col-lg-4">
+                        <div class="feature-item bottom">
                             <i class="icon-home text-primary"></i>
                             <h3>Be in control</h3>
                             <p>Private keys never leave your device.  You control your private keys</p>
                         </div>
                       </div>
-                      <div class="col-lg-3">
-                          <div class="feature-item">
+                      <div class="col-lg-4">
+                          <div class="feature-item bottom">
                               <i class="icon-calculator text-primary"></i>
                               <h3>Flexible fees</h3>
                               <p>Starting from 1 Satoshi. <br />Defined by you, the user</p>
                           </div>
                       </div>
-                      <div class="col-lg-3">
-                          <div class="feature-item">
+                      <div class="col-lg-4">
+                          <div class="feature-item bottom">
                               <i class="icon-rocket text-primary"></i>
                               <h3>Replace-By-Fee</h3>
                               <p>(RBF) Speed-up your transactions by increasing the fee (BIP125)</p>
                           </div>
                       </div>
-                      <div class="col-lg-3">
+                    </div>
+                    <div class="col-lg-12 my-auto">
+                    <div class="row">
+                      <div class="col-lg-6">
                           <div class="feature-item">
                               <i class="icon-envelope-open text-primary"></i>
                               <h3>Export TXHEX</h3>
                               <p>Get transaction's TXHEX without broadcasting it, do it with relay of your choice</p>
+                          </div>
+                      </div>
+                       <div class="col-lg-6">
+                          <div class="feature-item">
+                              <i class="icon-eye text-primary"></i>
+                              <h3>Sentinel wallets</h3>
+                              <p>Watch-only wallets allow you to keep an eye on your cold storage without touching the hardware.</p>
                           </div>
                       </div>
                     </div>
