add marcos to the about section
add marcos to the about section

--- a/index.html
+++ b/index.html
@@ -250,23 +250,29 @@
         <p>We are <strong>Bitcoin</strong> enthusiasts focused on bringing the revolution to the people. 🔥<br />Reach out, we will appreciate your feedback.</p>
         
         <div class="row">
-          <div class="col-lg-4 people">
-            <img src="img/igor.png">
+          <div class="col-lg-3 people">
+            <a href="https://twitter.com/overtorment" target="_blank"><img src="img/igor.png"></a>
             <h3><a href="https://twitter.com/overtorment" target="_blank">Igor Korsakov</a></h3>
             <p>London</p>
             <p>Engineering</p>
           </div>
-          <div class="col-lg-4 people">
-            <img src="img/nuno.png">
+          <div class="col-lg-3 people">
+            <a href="https://twitter.com/nvcoelho" target="_blank"><img src="img/nuno.png"></a>
             <h3><a href="https://twitter.com/nvcoelho" target="_blank">Nuno Coelho</a></h3>
             <p>Barcelona</p>
             <p>Product & UX</p>
           </div>
-          <div class="col-lg-4 people">
+          <div class="col-lg-3 people">
             <img src="img/vlad.png">
             <h3>Vladimir Mishin</h3>
             <p>Puerto Plata</p>
             <p>Strategy</p>
+          </div>
+          <div class="col-lg-3 people">
+            <a href="https://twitter.com/marcosrdz" target="_blank"><img src="img/marcos.png"></a>
+            <h3><a href="https://twitter.com/marcosrdz" target="_blank">Marcos Rodriguez</a></h3>
+            <p>Atlanta</p>
+            <p>Technology</p>
           </div>
         </div>
     
