--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <a href="https://twitter.com/marcosrdz" target="_blank"><img src="img/marcos.png"></a>
             <h3><a href="https://twitter.com/marcosrdz" target="_blank">Marcos Rodriguez</a></h3>
             <p>Atlanta</p>
-            <p>Technology</p>
+            <p>Engineering</p>
           </div>
         </div>
     
