fix the features changes
fix the features changes

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                 <div class="row">
                   <a href="/features.html#segwit">
                     <div class="feature-item">
-                        <h3><i class="icon-wrench"></i> SegWit</h3>
-                        <p>SegWit supported in P2SH-compatibility mode</p>
+                        <h3><i class="icon-wrench"></i> SegWit & HD wallets</h3>
+                        <p>SegWit supported and HD wallets enable</p>
                     </div>
                   </a>
                 </div>
@@ -308,7 +308,7 @@
             <h3>Contact us</h3>
             <div> <a href="mailto:bluewallet@bluewallet.io">bluewallet@bluewallet.io</a></div>
             <p>
-              <a href="https://github.com/Overtorment/BlueWallet" target="_blank"><i class="fa fa-github"></i> github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank"><i class="fa fa-reddit"></i> reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank"><i class="fa fa-twitter"></i> twitter</a></p>
+              <a href="https://github.com/bluewallet/bluewallet" target="_blank"><i class="fa fa-github"></i> github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank"><i class="fa fa-reddit"></i> reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank"><i class="fa fa-twitter"></i> twitter</a></p>
           </div>
         </div>
 
