--- a/features.html
+++ b/features.html
@@ -101,49 +101,55 @@
           <div class="col-lg-12 my-auto">
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-eye"></i> Sentinel wallets <span class="badge badge-success">new</span></h3>
+                  <h3 class="text-primary" id="sentinel"><i class="icon-eye"></i> Sentinel wallets <span class="badge badge-success">new</span></h3>
                   <p>Watch-only wallets allow you to keep an eye on your cold storage without touching the hardware. Easily import your cold storage wallet and watch it from your app without ever touching it.</p>
                 </div>
             </div>
             <div class="row">
               <div class="feature-item">
-                <h3 class="text-primary"><i class="fa fa-github"></i> Open Source</h3>
+                <h3 class="text-primary" id="opensource"><i class="fa fa-github"></i> Open Source</h3>
                 <p><strong>blue wallet</strong> is built on a public repo, up-to-date and available on the <a href="https://github.com/BlueWallet/BlueWallet" target="_blank">BlueWallet GitHub</a>. This means that any user can build it and run it on his own, without any custodial dependencies. Verify the code and contribute to the wallet development. Bluewallet is made with ReactNative and Distributed under a <a href="https://opensource.org/licenses/MIT" target="_blank">MIT licensed</a>.</p>
               </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-target"></i> Plausible deniability</h3>
+                  <h3 class="text-primary" id="pdenial"><i class="icon-target"></i> Plausible deniability</h3>
                   <p>A custom made feature thinking about your personal security. <strong>blue wallet</strong> allows you to define a different Password which will decrypt a fake wallet set up. For any situation you are forced to disclose your access or when you don't want or you can't show your real wallet.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-key"></i> Full encryption</h3>
+                  <h3 class="text-primary" id="encryption"><i class="icon-key"></i> Full encryption</h3>
                   <p>On top of iOS multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not a reliable security source, so you will have an aditional password available to secure your wallet instead.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-wrench"></i> SegWit</h3>
+                  <h3 class="text-primary" id="segwit"><i class="icon-wrench"></i> SegWit</h3>
                   <p>SegWit supported in P2SH-compatibility mode. Segwit was a massive upgrade to the Bitcoin Protocol released in 2017. You will find all wallets with SegWit enalbe by default. Find more about <a href="https://segwit.org/" target="_blank">SegWit here</a>.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-home"></i> Be in control</h3>
+                  <h3 class="text-primary"><i class="fa fa-neuter"></i> HD wallets</h3>
+                  <p>The Hierarchical Deterministic (HD) key creation and transfer protocol (BIP32), which allows creating child keys from parent keys in a hierarchy. The HD Wallets will generate you different public keys for each transactions.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="feature-item">
+                  <h3 class="text-primary" id="pkeys"><i class="icon-home"></i> Be in control</h3>
                   <p>Your <strong>Private keys</strong> will never leave your device.  You will be in full control of your private keys. You can at any moment generate backups and exports/imports of your wallets, with full control of what to do with your private keys.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-calculator"></i> Flexible fees</h3>
+                  <h3 class="text-primary" id="flexfees"><i class="icon-calculator"></i> Flexible fees</h3>
                   <p>Starting from 1 Satoshi.  Defined by you, with full flexibility on the amount you want to add to your transaction. <strong>blue wallet</strong> also provides you a fee estimation to give you an idea how much to add to your transaction to be included on the next block.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary"><i class="icon-rocket"></i> Replace-By-Fee</h3>
+                  <h3 class="text-primary" id="rbf"><i class="icon-rocket"></i> Replace-By-Fee</h3>
                   <p>If you would like to speed up a transaction, <strong>blue wallet</strong> allows to do just that by suporting <strong>RBF</strong>. Speed-up your transactions by increasing the fee (BIP125).</p>
                 </div>
             </div>
