--- a/features.html
+++ b/features.html
@@ -102,13 +102,13 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="sentinel"><i class="icon-eye"></i> Sentinel wallets <span class="badge badge-success">new</span></h3>
-                  <p>Watch-only wallets allow you to keep an eye on your cold storage without touching the hardware. Easily import your cold storage wallet and watch it from your app without ever touching it.</p>
+                  <p>Watch-only wallets allow you to keep an eye on your cold storage without touching your private key. Easily import your address or xpub and watch it from your app without ever touching it.</p>
                 </div>
             </div>
             <div class="row">
               <div class="feature-item">
                 <h3 class="text-primary" id="opensource"><i class="fa fa-github"></i> Open Source</h3>
-                <p><strong>blue wallet</strong> is built on a public repo, up-to-date and available on the <a href="https://github.com/BlueWallet/BlueWallet" target="_blank">BlueWallet GitHub</a>. This means that any user can build it and run it on his own, without any custodial dependencies. Verify the code and contribute to the wallet development. Bluewallet is made with ReactNative and Distributed under a <a href="https://opensource.org/licenses/MIT" target="_blank">MIT licensed</a>.</p>
+                <p><strong>blue wallet</strong> is built on a public repo, up-to-date and available on the <a href="https://github.com/BlueWallet/BlueWallet" target="_blank">BlueWallet GitHub</a>. This means that any user can build it and run it on his own, without any custodial dependencies. Verify the code and contribute to the wallet development. BlueWallet is made with ReactNative and Distributed under a <a href="https://opensource.org/licenses/MIT" target="_blank">MIT licensed</a>.</p>
               </div>
             </div>
             <div class="row">
@@ -120,13 +120,13 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="encryption"><i class="icon-key"></i> Full encryption</h3>
-                  <p>On top of iOS multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not a reliable security source, so you will have an aditional password available to secure your wallet instead.</p>
+                  <p>On top of iOS multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not secutire, so you will have an aditional password to encrypt your wallet instead.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="segwit"><i class="icon-wrench"></i> SegWit</h3>
-                  <p>SegWit supported in P2SH-compatibility mode. Segwit was a massive upgrade to the Bitcoin Protocol released in 2017. You will find all wallets with SegWit enalbe by default. Find more about <a href="https://segwit.org/" target="_blank">SegWit here</a>.</p>
+                  <p>SegWit supported in P2SH-compatibility mode. Segwit was a massive upgrade to the Bitcoin Protocol released in 2017. You will find all wallets with SegWit enabled by default. Find more about <a href="https://segwit.org/" target="_blank">SegWit here</a>.</p>
                 </div>
             </div>
             <div class="row">
@@ -135,10 +135,16 @@
                   <p>The Hierarchical Deterministic (HD) key creation and transfer protocol (BIP32), which allows creating child keys from parent keys in a hierarchy. The HD Wallets will generate you different public keys for each transactions.</p>
                 </div>
             </div>
+              <div class="row">
+                  <div class="feature-item">
+                      <h3 class="text-primary" id="multiple_wallets"><i class="icon-wrench"></i> Multiple wallets support</h3>
+                      <p><strong>blue wallet</strong> aims to support maximum wallet standards at the same time. Currently supported: BIP44 (HD), BIP49 (HD SegWit), BIP39 Breadwallet-compatible (m/0'/0/0), Legacy single-address, SegWit single-address (P2SH). </p>
+                  </div>
+              </div>
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="pkeys"><i class="icon-home"></i> Be in control</h3>
-                  <p>Your <strong>Private keys</strong> will never leave your device.  You will be in full control of your private keys. You can at any moment generate backups and exports/imports of your wallets, with full control of what to do with your private keys.</p>
+                  <p>Your <strong>Private keys</strong> never leave your device.  You are in full control of your private keys. You can at any moment generate backups and export/import your wallets, with full control of what to do with your private keys.</p>
                 </div>
             </div>
             <div class="row">
@@ -174,13 +180,19 @@
             <div class="row">
                 <div class="feature-item">
                   <h3></i>Batch TX</h3>
-                  <p>Ability to broadcast multiple transactions at the same time.</p>
+                  <p>Ability to pay multiple addressess with a single transaction. Save on fees and optimize blockspace usage.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
                   <h3></i>MultiSig TX</h3>
-                  <p>Ability to sign with multiple signatures transactions.</p>
+                  <p>Add security to your funds. Each transactions requires M of N signatures (with keys stored on different physical devices with BlueWallet).</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="feature-item">
+                  <h3></i>Plug your node</h3>
+                  <p>Plug your own Bitcoin Core node for a maximum sovereignty.</p>
                 </div>
             </div>
         </div>
