--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Subscribe</h5>
+            <h5 class="modal-title" id="exampleModalLongTitle">Android coming soon...</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
