Revert "Revert "Prepare for android""

--- a/index.html
+++ b/index.html
@@ -107,10 +107,14 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h2>A <strong>Bitcoin wallet</strong> for iOS </h2>
-               <h1 class="mb-5">Easy to use <span class="light-blue">and secure</span></h1>
-              <a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
-                <img src="img/app-store-badge-dark.svg" alt="app store link"></a>
+              <h2>A <strong>Bitcoin wallet</strong> for iOS and android</h2>
+                <h1 class="mb-5">Easy to use <span class="light-blue">and secure</span></h1>
+                  <ul class="list-unstyled cta">
+                    <li><a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
+                    <img src="img/app-store-badge.svg" alt="app store link"></a></li>
+                    <li><a href="" data-toggle="modal" data-target="#ModalAndroid">
+                    <img src="img/play-store-badge.svg" alt="app store link"></a></li>
+                  </ul>
             </div>
 
           </div>
@@ -124,6 +128,41 @@
 
 
 
+    <!-- Modal -->
+    <div class="modal fade" id="ModalAndroid" tabindex="-1" role="dialog" aria-labelledby="Modal android" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Android coming soon...</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- Begin Mailchimp Signup Form -->
+              <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+              <style type="text/css">
+                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+              <form action="https://woolrabbit.us17.list-manage.com/subscribe/post?u=6733da37320f82a3dbe84a9cc&amp;id=2474ce3b66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+                <label for="mce-EMAIL">Subscribe to blue wallet</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6733da37320f82a3dbe84a9cc_2474ce3b66" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+              </form>
+              </div>
+
+              <!--End mc_embed_signup-->
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
@@ -248,12 +287,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 mx-auto">
-            <h2 class="section-heading">Crafted for <strong>iOS</strong> and <strong>Bitcoin users</strong></h2>
+            <h2 class="section-heading">Crafted for <strong>iOS</strong> and <strong>android</strong><br />by <strong>Bitcoin users</strong></h2>
             <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
             <div class="badges">
-              <!--<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>-->
-              <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge-dark.svg" alt=""></a>
+              <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
+              <a href="" data-toggle="modal" data-target="#ModalAndroid">
+                    <img src="img/play-store-badge.svg" alt="app store link"></a>
             </div>
+
           </div>
         </div>
       </div>
