fix mobile styles

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
             <div class="badges">
               <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
-              <a href="" data-toggle="modal" data-target="#ModalAndroid">
+              <a class="badge-link" href="" data-toggle="modal" data-target="#ModalAndroid">
                     <img src="img/play-store-badge.svg" alt="app store link"></a>
             </div>
 
