--- a/features.html
+++ b/features.html
@@ -138,7 +138,7 @@
               <div class="row">
                   <div class="feature-item">
                       <h3 class="text-primary" id="multiple_wallets"><i class="icon-wrench"></i> Multiple wallets support</h3>
-                      <p><strong>blue wallet</strong> aims to support maximum wallet standards at the same time. Currently supported: BIP44 (HD), BIP49 (HD SegWit), BIP39 Breadwallet-compatible (m/0'/0/0), Legacy single-address, SegWit single-address (P2SH). </p>
+                      <p><strong>blue wallet</strong> aims to support maximum wallet standards. Currently supported: BIP44 (HD), BIP49 (HD SegWit), BIP39 Breadwallet-compatible (m/0'/0/0), Legacy single-address, SegWit single-address (P2SH). You can have many wallets in a single app at the same time.</p>
                   </div>
               </div>
             <div class="row">
