add telegram link

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <h3>Contact us</h3>
             <div> <a href="mailto:bluewallet@bluewallet.io">bluewallet@bluewallet.io</a></div>
             <p>
-              <a href="https://github.com/bluewallet/bluewallet" target="_blank"><i class="fa fa-github"></i> github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank"><i class="fa fa-reddit"></i> reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank"><i class="fa fa-twitter"></i> twitter</a></p>
+              <a href="https://t.me/bluewallet" target="_blank"><i class="fa fa-telegram"></i> telegram</a> / <a href="https://github.com/bluewallet/bluewallet" target="_blank"><i class="fa fa-github"></i> github</a> / <a href="https://www.reddit.com/r/bluewallet/" target="_blank"><i class="fa fa-reddit"></i> reddit</a> / <a href="https://twitter.com/bluewalletio" target="_blank"><i class="fa fa-twitter"></i> twitter</a></p>
           </div>
         </div>
 
