--- a/index.html
+++ b/index.html
@@ -359,7 +359,25 @@
 
     <footer>
       <div class="container">
-        <p>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</p>
+        <h2>Get updates</h2>
+        <p>Relevant updates on your email box. We won't spam you.</p>
+        <!-- Begin Mailchimp Signup Form -->
+              <style type="text/css">
+                #mc_embed_signup2{clear:left; width:100%;}
+              </style>
+              <div id="mc_embed_signup2">
+              <form action="https://woolrabbit.us17.list-manage.com/subscribe/post?u=6733da37320f82a3dbe84a9cc&amp;id=2474ce3b66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6733da37320f82a3dbe84a9cc_2474ce3b66" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+              </form>
+              </div>
+
+              <!--End mc_embed_signup-->
+        <span>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="privacy.txt">Privacy</a>
