--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="BlueWallet - Bitcoin wallet">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
+    <meta name="description" content="Bitcoin wallet for iOS and Android focus on security and UX">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
-    <title>BlueWallet - Bitcoin wallet</title>
+    <title>BlueWallet - Bitcoin wallet for iOS and Android</title>
 
     <!-- Bootstrap core CSS -->
     <link href="ven/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -107,8 +107,8 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h2>A <strong>Bitcoin wallet</strong> for iOS and android</h2>
-                <h1 class="mb-5">Easy to use <span class="light-blue">and secure</span></h1>
+              <h1>A <strong>Bitcoin wallet</strong> for iOS and android</h1>
+                <h2 class="mb-5">Easy to use <span class="light-blue">and secure</span></h2>
                   <ul class="list-unstyled cta">
                     <li><a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
                     <img src="img/app-store-badge.svg" alt="app store link"></a></li>
