more keywords on the description

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
-    <meta name="description" content="Bitcoin wallet for iOS and Android focus on security and UX">
+    <meta name="description" content="Bitcoin wallet for iOS and Android focus on security and UX. Open source, Segwit and HD wallets, lightning network, plausible deniability, replace by fee and full encryption">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
     <title>BlueWallet - Bitcoin wallet for iOS and Android</title>
