add android app links to play store
add android app links to play store

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
               <h1>A <strong>Bitcoin wallet</strong> for iOS and android</h1>
                 <h2 class="mb-5">Easy to use <span class="light-blue">and secure</span></h2>
                   <ul class="list-unstyled cta">
-                    <li><a class="badge-link2"  href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
+                    <li><a class="badge-link2" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
                     <img src="img/app-store-badge.svg" alt="app store link"></a></li>
-                    <li><a href="" data-toggle="modal" data-target="#ModalAndroid">
-                    <img src="img/play-store-badge.svg" alt="app store link"></a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank">
+                    <img src="img/play-store-badge.svg" alt="play store link"></a></li>
                   </ul>
             </div>
 
@@ -291,8 +291,7 @@
             <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
             <div class="badges">
               <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
-              <a class="badge-link" href="" data-toggle="modal" data-target="#ModalAndroid">
-                    <img src="img/play-store-badge.svg" alt="app store link"></a>
+              <a class="badge-link" href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank"><img src="img/play-store-badge.svg" alt="play store link"></a>
             </div>
 
           </div>
@@ -300,17 +299,6 @@
       </div>
     </section>
 
-
-
-    <!-- <section class="cta">
-      <div class="cta-content">
-        <div class="container">
-          <h2>Stop waiting.<br>Start building.</h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
-        </div>
-      </div>
-      <div class="overlay"></div>
-    </section> -->
 
     <section class="contact" id="contact">
       <div class="container">
