add lightning to website
add lightning to website and small fixes for android

--- a/features.html
+++ b/features.html
@@ -101,7 +101,13 @@
           <div class="col-lg-12 my-auto">
             <div class="row">
                 <div class="feature-item">
-                  <h3 class="text-primary" id="sentinel"><i class="icon-eye"></i> Sentinel wallets <span class="badge badge-success">new</span></h3>
+                  <h3 class="text-primary" id="lightning"><i class="fa fa-bolt"></i> Lightning Wallets <span class="badge badge-success">new</span></h3>
+                  <p>Wallets with support for the Lightning Network Protocol. Unfairly cheap and fast transactions.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="feature-item">
+                  <h3 class="text-primary" id="sentinel"><i class="icon-eye"></i> Watch-only wallets</h3>
                   <p>Watch-only wallets allow you to keep an eye on your cold storage without touching your private key. Easily import your address or xpub and watch it from your app without ever touching it.</p>
                 </div>
             </div>
@@ -120,7 +126,7 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="encryption"><i class="icon-key"></i> Full encryption</h3>
-                  <p>On top of iOS multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not secutire, so you will have an aditional password to encrypt your wallet instead.</p>
+                  <p>On top of the phone multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not secutire, so you will have an aditional password to encrypt your wallet instead.</p>
                 </div>
             </div>
             <div class="row">
@@ -171,12 +177,6 @@
             <p class="text-muted"></p>
         </div>
         <div class="col-lg-12 my-auto">
-           <div class="row">
-                <div class="feature-item">
-                  <h3>Lightning Wallets</h3>
-                  <p>Wallets with support for the Lightning Protocol. Unfairly cheap and fast transactions.</p>
-                </div>
-            </div>
             <div class="row">
                 <div class="feature-item">
                   <h3></i>Batch TX</h3>
