--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
-    <meta name="description" content="Bitcoin wallet for iOS and Android focus on security and UX. Open source, Segwit and HD wallets, lightning network, plausible deniability, replace by fee and full encryption">
+    <meta name="description" content="Bitcoin and Lightning wallet for iOS and Android focus on security and UX. Open source, Segwit and HD wallets, lightning network, plausible deniability, replace by fee and full encryption">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
     <title>BlueWallet - Bitcoin and Lightning wallet for iOS and Android</title>
@@ -60,16 +60,16 @@
     <meta property="og:image" content="https://bluewallet.io/img/bluewallet-big.png" />
     <meta name="twitter:image" content="https://bluewallet.io/img/bluewallet-big.png" />
 
-    <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
+    <meta property="og:site_name" content="BlueWallet - Bitcoin and Lightning wallet" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
+    <meta property="og:description" content="A Bitcoin and Lightning wallet for iOS. Easy to use and secure" />
     <meta property="og:url" content="https://bluewallet.io/" />
-    <meta property="og:title" content="BlueWallet - Bitcoin wallet" />
+    <meta property="og:title" content="BlueWallet - Bitcoin and Lightning wallet" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BlueWallet - Bitcoin wallet" />
-    <meta name="twitter:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
+    <meta name="twitter:title" content="BlueWallet - Bitcoin and Lightning wallet" />
+    <meta name="twitter:description" content="A Bitcoin and Lightning wallet for iOS. Easy to use and secure" />
     <meta name="twitter:url" content="https://bluewallet.io/" />
 
   </head>
@@ -80,7 +80,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="https://bluewallet.io">
-          <img src="img/logo-bluewallet.svg" alt="BlueWallet - Bitcoin Wallet">
+          <img src="img/logo-bluewallet.svg" alt="BlueWallet - Bitcoin and Lightning Wallet">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -107,7 +107,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1>A <strong>Bitcoin wallet</strong> for iOS and android</h1>
+              <h1>A <strong>Bitcoin and Lightning wallet</strong> for iOS and Android</h1>
                 <h2 class="mb-5">Easy to use <span class="light-blue">and secure</span></h2>
                   <ul class="list-unstyled cta">
                     <li><a class="badge-link2" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
