--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -4,19 +4,36 @@
 </head>
 
 <body>
+<br/>
+<br/>
     <table width="100%">
         <tr>
             <td>
-              <a href="https://www.bitrefill.com">bitrefill.com</a>
+              <a href="https://www.bitrefill.com">
+                <img src="bitrefill.png"/><br/>
+                bitrefill.com<br/>
+                Buy 30+ Vouchers, refill your phone or pay your bills
+              </a>
             </td>
             
 
             <td>
-              <a href="https://zigzag.io/">zigzag.io</a>
+              <a href="https://zigzag.io/">
+                <img src="zigzag.png"/><br/>
+                zigzag.io<br/>
+                Exchange Top
+                Cryptocurrencies
+                in seconds
+                with low fees
+              </a>
             </td>
  
-            <td>
-              <a href="https://yalls.org/">yalls.org</a>
+            <td>              
+              <a href="https://yalls.org/">
+                  <img src="yalls.png"/><br/>
+                  yalls.org<br/>
+                  Read and write articles, with Lightning Network micropayments
+              </a>
             </td>
             
         </tr>
