ADD: https://www.lightningspin.com

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -44,6 +44,20 @@
               </a>
             </td>
         </tr>
+        
+
+        <tr>
+            <td>              
+              <a href="https://www.lightningspin.com/">
+                  <br/>
+                  https://www.lightningspin.com
+              </a>
+            </td>
+            
+
+            <td>
+            </td>
+        </tr>
     </table>
 </body>
 
