--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
               </div>
 
               <!--End mc_embed_signup-->
+        <div>Donate<br />
+          <em><a href="bitcoin:36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV">36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV</a></em>
+        </div>
+        <br />
         <span>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
