--- a/features.html
+++ b/features.html
@@ -201,15 +201,19 @@
 
 <footer>
   <div class="container">
-    <p>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</p>
-    <ul class="list-inline">
-      <li class="list-inline-item">
-        <a href="privacy.txt">Privacy</a>
-      </li>
-      <li class="list-inline-item">
-        <a href="terms.txt">Terms</a>
-      </li>
-    </ul>
+    <div>Donate<br />
+          <em><a href="bitcoin:36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV">36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV</a></em>
+        </div>
+        <br />
+        <span>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</span>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a href="privacy.txt">Privacy</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="terms.txt">Terms</a>
+          </li>
+        </ul>
   </div>
 </footer>
 
