FIX: zigzag link

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -17,7 +17,7 @@
             
 
             <td>
-              <a href="https://zigzag.io/">
+              <a href="https://zigzag.io/?utm_source=integration&utm_medium=bluewallet&utm_campaign=marketplace">
                 <img src="zigzag.png"/><br/>
                 Exchange Top
                 Cryptocurrencies
