--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -1,69 +1,101 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120614437-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120614437-1');
+      </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="marketplace.css">
 </head>
 
 <body>
-<br/>
-<br/>
-
-<div class="container">
-
-
-    <div class="row">
-        <div class="col">
+    <div class="container">
+        <div class="row"> <!-- start -->
             <a href="https://www.bitrefill.com">
-                <img src="bitrefill.png" width="75%"/><br/>
-                Buy 30+ Vouchers, refill your phone or pay your bills
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/bitrefill.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Bitrefill</h2>
+                        <p>Buy vouchers, refill your phone or pay your bills</p>
+                    </div>
+                </div>
             </a>
-        </div>
-        <div class="col">
-
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://zigzag.io/?utm_source=integration&utm_medium=bluewallet&utm_campaign=marketplace">
-                <img src="zigzag.png" width="75%"/><br/>
-                Exchange Top Cryptocurrencies in seconds with low fees
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/zigzag.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Zigzag</h2>
+                        <p>Exchange crypto in seconds with low fees</p>
+                    </div>
+                </div>
             </a>
-        </div>
-    </div>
-
-
-
-    <div class="row">
-        <div class="col">
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://yalls.org/">
-                <img src="yalls.png"/><br/>
-                Read and write articles, with Lightning Network micropayments
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/yalls.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Y'alls</h2>
+                        <p>Read and write articles, with Lightning payments</p>
+                    </div>
+                </div>
             </a>
-        </div>
-        <div class="col">
-
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://store.blockstream.com">
-                <img src="blockstream.png" width="75%"/><br/>
-                Leading stickers & merchandise provider
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/blockstream.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Blockstream</h2>
+                        <p>Leading stickers & merchandise provider</p>
+                    </div>
+                </div>
             </a>
-        </div>
-    </div>
-
-
-    <div class="row">
-        <div class="col">
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://www.lightningspin.com/">
-                <br/>
-                lightningspin.com
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lspin.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Lightning Spin</h2>
+                        <p>Spin wheel lightning network game</p>
+                    </div>
+                </div>
             </a>
-        </div>
-        <div class="col">
-
-        </div>
-    </div>
-
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://lightning-roulette.com/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lroulette.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Lightning Roulette</h2>
+                        <p>Roulette lightning network game</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
 </div>
-
 </body>
-
 </html>
