--- a/donate.html
+++ b/donate.html
@@ -100,7 +100,7 @@
                 </div>
     
                 <div class="tippin text-center">
-                  <h5>Off-chain (Lighting)</h5>
+                  <h5>Off-chain (Lightning)</h5>
                   <!-- Beginning of tippin.me Button -->
                   <div id="tippin-button" data-dest="bluewalletio"></div>
                   <script src="https://tippin.me/buttons/tip.js" type="text/javascript"></script>
@@ -114,11 +114,12 @@
 
 <footer>
   <div class="container">
-    <div>Donate<br />
-          <em><a href="bitcoin:36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV">36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV</a></em>
+    <div>
+          <a href="/donate.html"><span class="foot-menu">Donate</span></a>
+          <a href="/features.html"><span class="foot-menu">Features</span></a>
         </div>
         <br />
-        <span>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</span>
+        <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="privacy.txt">Privacy</a>
