--- a/index.html
+++ b/index.html
@@ -366,11 +366,12 @@
               </div>
 
               <!--End mc_embed_signup-->
-        <div>Donate<br />
-          <em><a href="bitcoin:36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV">36JxaUrpDzkEerkTf1FzwHNE1Hb7cCjgJV</a></em>
+        <div>
+          <a href="/donate.html"><span class="foot-menu">Donate</span></a>
+          <a href="/features.html"><span class="foot-menu">Features</span></a>
         </div>
         <br />
-        <span>&copy; BlueWallet Services S.R.L. Calle Beller 51, Puerto Plata, 57000, Republica Dominicana. All Rights Reserved.</span>
+        <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="privacy.txt">Privacy</a>
