add tippin bluewallet
add tippin bluewallet

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -138,13 +138,13 @@
         </div> <!-- end -->
         
         <div class="row"> <!-- start -->
-            <a href="https://tippin.me/@overtorment">
+            <a href="https://tippin.me/@bluewalletio">
                 <div class="grid-container">
                     <div class="appicon">
                         
                     </div>
                     <div class="apptext">
-                        <h2>Tip @overtorment</h2>
+                        <h2>Tip @bluewallet</h2>
                         <p></p>
                     </div>
                 </div>
