Added Tallycoin row

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -150,6 +150,20 @@
                 </div>
             </a>
         </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://tallyco.in">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/tallycoin.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Tallycoin</h2>
+						<p>Fundraising platform in bitcoin and ⚡ lightning</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
         
 </div>
 </body>
