--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -150,7 +150,21 @@
                 </div>
             </a>
         </div> <!-- end -->
-        
+
+
+        <div class="row"> <!-- start -->
+            <a href="https://kriptode.com/receivesms/index.html">
+                <div class="grid-container">
+                    <div class="appicon">
+                        
+                    </div>
+                    <div class="apptext">
+                        <h2>Receive SMS</h2>
+                        <p>Generate disposable phone number to receive text messages.</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
 </div>
 </body>
 </html>
