Added img element to appicon

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -156,7 +156,7 @@
             <a href="https://kriptode.com/receivesms/index.html">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/receivesms.png"
+                        <img src="img/receivesms.png">
                     </div>
                     <div class="apptext">
                         <h2>Receive SMS</h2>
