Update features page for LN custody disclaimer
More clear and transparent .

--- a/features.html
+++ b/features.html
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="pkeys"><i class="icon-home"></i> Be in control</h3>
-                  <p>Your <strong>Private keys</strong> never leave your device.  You are in full control of your private keys. You can at any moment generate backups and export/import your wallets, with full control of what to do with your private keys.</p>
+                  <p>Your <strong>Private keys</strong> of on-chain bitcoins never leave your devic.  You are in full control of your private keys. You can at any moment generate backups and export/import your wallets, with full control of what to do with your private keys. Private keys of bitcoins in Lightning Network channels are however controlled by BlueWallet's LndHub server.</p>
                 </div>
             </div>
             <div class="row">
