Homepage custody disclaimer

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                   <a href="/features.html#pkeys">
                     <div class="feature-item"> 
                          <h3> <i class="icon-home"></i> Be in control</h3>
-                          <p>Private keys never leave your device.  You control your private keys</p>   
+                          <p>Private keys of on-chain wallets never leave your device.  You control your private keys of on-chain bitcoins.</p>   
                     </div>
                   </a>
                 </div>
