--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="row"> <!-- start -->
-            <a href="https://www.bitrefill.com/embed/lightning">
+            <a href="https://www.bitrefill.com/embed/lightning?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/bitrefill.png">
