--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="https://bluewallet.io">
+        <a class="navbar-brand js-scroll-trigger" href="/">
           <img src="img/logo-bluewallet.svg" alt="BlueWallet - Bitcoin and Lightning Wallet">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
