--- a/index.html
+++ b/index.html
@@ -277,8 +277,15 @@
           </div>
           
             <div class="feature-item">
-              <p>Unfairly cheap and fast transactions. Bluewallet was the first wallet to bring zero configuration, ready to use, user friendly Lightning Network Wallets for iOS and Android. Read more about our open source solution <a href="https://medium.com/bluewallet/bluewallet-brings-zero-configuration-lightning-payments-to-ios-and-android-30137a69f071" target="_blank">LNDhub here</a>.</p>
+              <p>Unfairly cheap and fast transactions. Bluewallet was the first wallet to bring zero configuration, ready to use, user friendly Lightning Network Wallets for iOS and Android. Read more about our open source <a href="/lightning-wallet.html">Lightning Wallets solution</a>.</p>
             </div>
+            <div class="row">
+            <div class="mx-auto">
+              <a href="/lightning-wallet.html">
+                <button type="button" class="btn btn-lg btn-outline-light">read more →</button>
+              </a>
+            </div>
+          </div>
             <div class="lightning-wallet">
               <img src="img/lightning-wallet.png" alt="lightning network wallet">
             </div>
