--- a/features.html
+++ b/features.html
@@ -74,7 +74,7 @@
         <div class="navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
               <li class="single-page nav-item">
-                  <a href="https://bluewallet.io"><i class="fa fa-close"></i></a>
+                  <a href="https://bluewallet.io"><i class="fa fa-arrow-left"></i> home</a>
               </li>
           </ul>
         </div>
