--- a/lightning-wallet.html
+++ b/lightning-wallet.html
@@ -90,7 +90,7 @@
         </div>
           <div class="col-lg-12 my-auto">
             <div class="row">
-               <p class="lcontent">On Bluewallet you can use <strong>custodial Lightning wallets (or choose to run your own node)</strong>, that allows you to seemless use the Lightning Network for payments, without the need to open channels, be online, provide liquidity or operate and mantain a node. Our goal is to remove friction and provide a great user experience. This trade off comes with pros and cons, please read more about them on the <a href="https://medium.com/bluewallet/bluewallet-brings-zero-configuration-lightning-payments-to-ios-and-android-30137a69f071" target="_blank">LNDhub announcement article</a>.</p>
+               <p class="lcontent">On Bluewallet, you can use <strong>custodial Lightning wallets (or choose to run your own node)</strong>, that allows you to seamlessly use the Lightning Network for payments, without the need to open channels, be online, provide liquidity or operate and mantain a node. Our goal is to remove friction and provide a great user experience. This trade off comes with pros and cons, please read more about them on the <a href="https://medium.com/bluewallet/bluewallet-brings-zero-configuration-lightning-payments-to-ios-and-android-30137a69f071" target="_blank">LNDhub announcement article</a>.</p>
             </div>
             <div class="row imghero">
                <img src="img/lightning-wallet2.png">
@@ -122,7 +122,7 @@
               </div>
               <div class="feature-item"> 
                   <h4>Send<span class="done">available</span></h4>
-                  <p>Make payments or send Satoshis after scanning a QR code or having an address. Allows to Scan QR codes, Use screenshots of QR codes or a Lightning addresses. Requires having funds previously.</p>
+                  <p>Make payments or send Satoshis after scanning a QR code or having an address. Allows to Scan QR codes, Use screenshots of QR codes or a Lightning addresses. To use requires having funds previously.</p>
               </div>
               <div class="feature-item"> 
                   <h4>Receive<span class="done">available</span></h4>
